--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.4.2
+aniso8601==8.0.0
 apispec==1.3.3
 arrow==0.15.6
 attrs==19.3.0
@@ -7,29 +8,51 @@ Babel==2.8.0
 binaryornot==0.4.4
 boto3==1.13.26
 botocore==1.16.26
+CacheControl==0.12.6
+cachetools==4.1.1
 certifi==2020.4.5.2
+cffi==1.14.0
 chardet==3.0.4
 chevron==0.13.1
 click==7.1.2
 colorama==0.4.3
 cookiecutter==1.6.0
+countdown-timer==0.0.3
+cryptography==2.9.2
 dateparser==0.7.6
 defusedxml==0.6.0
 dnspython==1.16.0
 docker==4.2.1
 docutils==0.15.2
 email-validator==1.1.1
+firebase-admin==4.3.0
 Flask==1.0.4
 Flask-AppBuilder==2.3.4
+Flask-Assets==2.0
 Flask-Babel==1.0.0
+flask-blueprint==1.3.0
+Flask-JWT-Extended==3.24.1
 flask-lambda==0.0.4
 Flask-Login==0.4.1
 Flask-Migrate==2.5.3
 Flask-OpenID==1.2.5
+flask-redis==0.4.0
+Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
 future==0.18.2
+google-api-core==1.21.0
+google-api-python-client==1.9.3
+google-auth==1.18.0
+google-auth-httplib2==0.0.4
+google-cloud-core==1.3.0
+google-cloud-firestore==1.8.1
+google-cloud-storage==1.29.0
+google-resumable-media==0.5.1
+googleapis-common-protos==1.52.0
+grpcio==1.30.0
 gunicorn==20.0.4
+httplib2==0.18.1
 idna==2.9
 importlib-metadata==1.6.1
 itsdangerous==1.1.0
@@ -43,18 +66,28 @@ MarkupSafe==1.1.1
 marshmallow==2.21.0
 marshmallow-enum==1.5.1
 marshmallow-sqlalchemy==0.23.1
+msgpack==1.0.0
 npm==0.1.1
 optional-django==0.1.0
 poyo==0.5.0
 prison==0.1.3
+protobuf==3.12.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyJWT==1.6.1
 pyrsistent==0.16.0
 python-dateutil==2.8.0
+python-dotenv==0.14.0
 python-editor==1.0.4
+python-resources==0.3
 python3-openid==3.1.0
 pytz==2020.1
 PyYAML==5.3.1
+redis==3.5.3
 regex==2020.6.8
 requests==2.23.0
+rsa==4.6
 s3transfer==0.3.3
 serverlessrepo==0.1.9
 simplejson==3.17.0
@@ -63,8 +96,10 @@ SQLAlchemy==1.3.17
 SQLAlchemy-Utils==0.36.6
 tomlkit==0.5.8
 tzlocal==2.1
+uritemplate==3.0.1
 urllib3==1.25.9
 uuid==1.30
+webassets==2.0
 websocket-client==0.57.0
 Werkzeug==1.0.1
 whichcraft==0.6.1
